[package]
name = "runtime_injector"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Runtime dependency injection container"
# repository = "https://github.com/TehPers/runtime_injector"
# documentation = "https://docs.rs/runtime_injector"
categories = [""]
readme = "README.md"

[features]
default = ["rc"]
arc = [] # Svc<T> = Arc<T>
rc = [] # Svc<T> = Rc<T>

[dependencies]
derive_more = "0.99"
