cargo-features = ["edition2021"]

[package]
name = "runtime_injector"
version = "0.4.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2021"
# edition = "2018"
license = "MIT OR Apache-2.0"
description = "Runtime dependency injection container"
repository = "https://github.com/TehPers/runtime_injector"
documentation = "https://docs.rs/runtime_injector"
keywords = ["dependency-injection", "di", "ioc"]
readme = "README.md"
exclude = []

[features]
default = ["arc"]
arc = [] # Svc<T> = Arc<T>
rc = [] # Svc<T> = Rc<T>
