[package]
name = "runtime_injector_actix"
version = "0.3.0"
edition = "2021"
authors = ["TehPers <tehperz@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Runtime dependency injection container for actix-web"
repository = "https://github.com/TehPers/runtime_injector"
documentation = "https://docs.rs/runtime_injector_actix"
keywords = ["dependency-injection", "di", "ioc", "actix", "web"]
readme = "README.md"
exclude = []

[features]
default = []
arc = [] # Ignored, just used for CI

[dependencies]
actix-web = "4"
futures-util = "0.3"

[dependencies.runtime_injector]
version = "0.5"
path = "../runtime_injector"
default_features = false
features = ["arc"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
